# JupyterPiDAQ

./: ADCsim.py  ADS1115_Utility.py  ChannelSettings.py  DAQProc.py  DAQinstance.py  Demo.py  Development_Notes.md  InstructorTools.py  JupyterPiDAQmnu.js  README.md  Sensors.py  __init__.py  ideas.md  input_table.py  load_boards.py  pyproject.toml  requirements.txt  setup.py
Boards/: __init__.py  boards.py
Boards/JPhysSciLab_board_ADS1115/: __init__.py  board.py  sensors.py
Boards/PiGPIO/: ADS1115.py  DAC2.py  DAQC2.py  __init__.py
Boards/Simulated/: ADCsim.py  ADCsim_line.py
Documentation/: Installation.md  User Guide.md
Sensors/: sensors.py
Tests/: test_boards.py
dev_testing/: Brass_21-07-06_153105.csv  Heat Capacity - test.ipynb  Heat Capacity Test.ipynb  Lead_21-07-06_153950.csv  test_DAQProc.py
docs/: 3-channel Vernier Sensor Adapter Board.md  Change_Log.md  Development_Notes.md  Installation.md  User Guide.md  User_Guide.md  index.html  jupyterpidaq.html  search.js
docs/jupyterpidaq/: Boards.html  ChannelSettings.html  DAQProc.html  DAQinstance.html  Sensors.html
docs/jupyterpidaq/Boards/: PiGPIO.html  Simulated.html  boards.html  vernier.html
docs/jupyterpidaq/Sensors/: sensors.html
javascript/: InstructorToolsmnu.js  JupyterPiDAQmnu.js  input_table.js
jupyterpidaq/: ChannelSettings.py  DAQProc.py  DAQinstance.py  NewCalcColumn.py  __init__.py
jupyterpidaq/Boards/: __init__.py  boards.py
jupyterpidaq/Sensors/: __init__.py  sensors.py
jupyterpidaq/javascript/: JupyterPiDAQmnu.js
usage_examples/: JupyterPiDAQ Demo.ipynb
(+13 files in other folders)
