[tool.poetry]
name = "jupyterpidaq"
version = "0.5.0"
description = "Data Acquisition in Jupyter notebook on Raspberry Pi"
authors = ["Jonathan Gutow <jgutow@new.rr.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
Adafruit-ADS1x15="^1.0.2"
numpy = "^1.13"
matplotlib = "^1.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions="^0.5.1"
pandas = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
